--- a/register.html
+++ b/register.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./register.css">
     <style>
@@ -23,9 +24,10 @@
                 <input type="text" id="inputLastName" class="form-control" placeholder="Enter your Last Name" name="lastNameInput" required>
                 <input type="text" id="inputUserID" class="form-control" placeholder="Create a Username" name="userIdInput" required>
                 <input type="text" id="phoneNumber" class="form-control" placeholder="Enter Phone Number" name="phoneInput" required>
-                <input type="text" id="city" class="form-control" placeholder="Enter City"name ="cityInput" required>
-                <input type="text" id=""
-                <input type="text" id="Address" class="form-control" placeholder="Enter Address" name="addressInput" required>
+                <input type="text" id="city" class="form-control" placeholder="Enter City" name ="cityInput" required>
+                <input type="text" id="state" class="form-control" placeholder="Enter State" name="stateInput" required>
+                <input type="text" id="zipCode" class="form-control" placeholder="Enter Zipcode" name="zipInput" required>
+                <input type="text" id="address" class="form-control" placeholder="Enter Address" name="addressInput" required>
                 <input type="text" id="inputEmail" class="form-control" placeholder="Enter your Email Address" name="emailInput" required>
                 <button class="btn btn-lg btn-primary btn-block btn-signin" onclick="myFunction()">Register</button>
             </form><!-- /form --><!--
@@ -35,7 +37,7 @@
         </div><!-- /card-container -->
     </div><!-- /container -->
     <script>
-      function myFunction() {
+      function myFunction()/*
       //    document.getElementById("myText").innerHTML = myText;
           if (document.getElementsByName("userIdInput")[0].value == "Carter") {
 //            var myText = ["January","Febuary", "March", "April"];
@@ -48,6 +50,15 @@
           } else {
             alert("User ID Not Recognized");
           }
+        }*/
+        {
+          var firstNameInput = document.getElementsByName("firstNameInput")[0].value;
+          var lastNameInput = document.getElementsByName("lastNameInput")[0].value;
+          var userIdInput = document.getElementsByName("userIdInput")[0].value;
+          var phoneNumberInput = document.getElementsByName("phoneNumber")[0].value;
+          var cityInput = document.getElementsByName("city")[0].value;
+          var stateInput = document.getElementsByName("state")[0].value;
+          var zipCodeInput = document.getElementsByName("userIdInput")[0].value;
         }
     </script>
   </body>
