--- a/progression.html
+++ b/progression.html
@@ -54,7 +54,7 @@
       </a><a href="">
         <button type="button" class="willybig3 btn btn-primary btn-lg">Children's Clothes</button><br>
       </a><a href="">
-        <button type="button" class="willybig4 btn btn-primary btn-lg">Jewerly</button>
+        <button type="button" class="willybig4 btn btn-primary btn-lg">Jewelry</button>
       </a><a href="">
         <button type="button" class="willybig5 btn btn-primary btn-lg">Furs</button>
       </a><a href="">
