--- a/progression.html
+++ b/progression.html
@@ -4,14 +4,7 @@
     <title>Progression WIP</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./progression.css">
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
->>>>>>> df866af9611c9c30df7669d80b909e18310f11a9
-=======
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
->>>>>>> 25ed6b75333701a8f2c9b4b665a388436e5c6021
     <style>
       button.willybig {
         padding: 60px 90px;
@@ -44,29 +37,6 @@
     </style>
   </head>
   <body>
-<<<<<<< HEAD
-<<<<<<< HEAD
-    <div>
-      <a href="">
-        <button type="button" class="willybig1 btn btn-primary btn-lg">Women's Clothes</button>
-      </a><a href="">
-        <button type="button" class="willybig2 btn btn-primary btn-lg">Men's Clothes</button>
-      </a><a href="">
-        <button type="button" class="willybig3 btn btn-primary btn-lg">Children's Clothes</button><br>
-      </a><a href="">
-        <button type="button" class="willybig4 btn btn-primary btn-lg">Jewerly</button>
-      </a><a href="">
-        <button type="button" class="willybig5 btn btn-primary btn-lg">Furs</button>
-      </a><a href="">
-        <button type="button" class="willybig6 btn btn-primary btn-lg">Home Decor</button>
-      </a>
-    </div>
-    <!-- Begin javascript sources -->
-    <!-- Keep at bottom -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-=======
-=======
->>>>>>> 25ed6b75333701a8f2c9b4b665a388436e5c6021
     <div id="screenZero">
       <button type="button" class="willybig1 btn btn-primary btn-lg">Women's Clothes</button>
       <button type="button" class="willybig2 btn btn-primary btn-lg">Men's Clothes</button>
@@ -87,18 +57,31 @@
     <div id="screenFursTwo">
       <button type="button" class="willybig2 btn btn-primary btn-lg">Outwear</button>
     </div>
+    <div id="screenFursOneFull">
+      <form action="/Form-page" method="post">
+        <div>
+          <label for="name">Name:</label> <input type="text" id="name" name="user_name">
+        </div>
+        <div>
+          <label for="mail">E-mail:</label> <input type="email" id="mail" name="user_mail">
+        </div>
+        <div>
+          <label for="msg">Message:</label> <textarea id="msg" name="user_message"></textarea>
+        </div>
+        <div class="button">
+          <button type="submit">Send your message</button>
+        </div>
+    </form>
+  </div>
     <script>
       $('#screenFurs').hide();
       $('#screenFursOne').hide();
       $('#screenFursTwo').hide();
+      $('#screenFursOneFull').hide();
     </script>
     <!-- Begin javascript sources -->
     <!-- Keep at bottom -->
     <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
-<<<<<<< HEAD
->>>>>>> df866af9611c9c30df7669d80b909e18310f11a9
-=======
->>>>>>> 25ed6b75333701a8f2c9b4b665a388436e5c6021
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- End -->
