--- a/WIP/David/Item_Selection.html
+++ b/WIP/David/Item_Selection.html
@@ -257,7 +257,7 @@
     <div class="container">
         <div class="card card-container">
             <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
-            <img id="profile-img" class="profile-img-card" src="ResaleShop.png" />
+            <img id="profile-img" class="profile-img-card" src="https://testjs.dblitt99.tk/hackclub/CWAC2018/ResaleShop.png" />
             <p id="profile-name" class="profile-name-card"></p>
             <form class="form-signin">
                 <span id="reauth-email" class="reauth-email"></span>
